--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
         <input type="text" id="nombre">
         <label>Minutos: </label>
         <input type="number" id="minutos">
-        <button type="button" id="btnAdd">Agregar</button> 
+        <button type="button" id="btn">Agregar</button> 
+    </div>
+    <div>
+        <label>Borrar artículo</label>
+        <input type="text" id="borrar">
+        <button type="button" id="btnBorrar">Borrar</button>
+    </div>
+    <div class="s">
+        <input type="number" id="buscar"/>
+        <button type="button" id="btnBuscar">Buscar</button>
     </div>
 </body>
 <script src="main.js" type="module"></script>
