--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input type="text" id="nombre">
         <label>Minutos: </label>
         <input type="number" id="minutos">
-        <button type="button" id="btn">Agregar</button> 
+        <button type="button" id="btn">Agregar</button>
     </div>
     <div>
         <label>Borrar artículo</label>
@@ -23,8 +23,12 @@
         <button type="button" id="btnBorrar">Borrar</button>
     </div>
     <div class="s">
-        <input type="number" id="buscar"/>
+        <input type="number" id="buscar" />
         <button type="button" id="btnBuscar">Buscar</button>
+    </div>
+    <div class="col-9 dos">
+        <label>Inventario</label>
+        <div id="inventario"></div>
     </div>
 </body>
 <script src="main.js" type="module"></script>
