--- a/index.html
+++ b/index.html
@@ -18,15 +18,18 @@
         <button type="button" id="btn">Agregar</button>
     </div>
     <div>
-        <label>Borrar artículo</label>
+        <h2>Buscar artículo</h2>
+        <input type="text" id="buscar" />
+        <button type="button" id="btnBuscar">Buscar</button>
+        <div id="consulta"></div>
+    </div>
+    <div>
+        <h2>Borrar artículo</h2>
         <input type="text" id="borrar">
         <button type="button" id="btnBorrar">Borrar</button>
     </div>
-    <div class="s">
-        <input type="number" id="buscar" />
-        <button type="button" id="btnBuscar">Buscar</button>
-    </div>
-    <div class="col-9 dos">
+    
+    <div>
         <label>Inventario</label>
         <div id="inventario"></div>
     </div>
